# manic

./: .gitignore  .gitjournal.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _git-journal  cog.toml  git-journal.bash  git-journal.fish  notes.txt  template.toml
crates/common/: Cargo.toml
crates/common/src/: array.rs  lib.rs
crates/croc_clone/: Cargo.toml
crates/croc_clone/src/: comm.rs  compress.rs  crypt.rs  error.rs  lib.rs  message.rs  options.rs  xxwriter.rs
crates/dexios_crypto/: Cargo.toml
crates/dexios_crypto/src/: cipher.rs
crates/manic_codec/: Cargo.toml
crates/manic_codec/src/: codec.rs  error.rs  lib.rs
crates/manic_crypto/: Cargo.toml
crates/manic_crypto/src/: bytes.rs  cipher.rs  error.rs  file_map.rs  header.rs  identity.rs  key.rs  lib.rs  shoop_handler.rs  signature.rs  stream.rs  visual.rs
crates/manic_crypto/src/codecs/: bincode_codec.rs  messagepack.rs  mod.rs  transport.rs
crates/manic_fs/: Cargo.toml
crates/manic_fs/src/: lib.rs
crates/manic_lzfoo/: Cargo.toml  README.md
crates/manic_lzfoo/src/: main.rs
crates/manic_lzfse/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/manic_lzfse/benches/: README.md  bench.rs
crates/manic_lzfse/data/mutate/: raw.hash  raw.lzfse  vx1.lzfse  vx2.hash  vx2.lzfse  vxn.hash  vxn.lzfse
crates/manic_lzfse/data/snappy/: COPYING  Mark.Twain-Tom.Sawyer.txt.hash  Mark.Twain-Tom.Sawyer.txt.lzfse  alice29.txt.hash  alice29.txt.lzfse  asyoulik.txt.hash  asyoulik.txt.lzfse  fireworks.jpeg.hash  fireworks.jpeg.lzfse  geo.protodata.hash  geo.protodata.lzfse  html.hash  html.lzfse  html_x_4.hash  html_x_4.lzfse  kppkn.gtb.hash  kppkn.gtb.lzfse  lcet10.txt.hash  lcet10.txt.lzfse  paper-100k.pdf.hash  paper-100k.pdf.lzfse  plrabn12.txt.hash  plrabn12.txt.lzfse  urls.10K.hash  urls.10K.lzfse
crates/manic_lzfse/data/special/: compound.hash  compound.lzfse  null.lzfse  null.vx2.lzfse
crates/manic_lzfse/data/synth/: random.lzfse  readme.txt  repl01.lzfse  repl02.lzfse  repl03.lzfse  repl04.lzfse  repl05.lzfse  repl06.lzfse  repl07.lzfse  repl08.lzfse  repl09.lzfse  repl10.lzfse  repl11.lzfse  repl12.lzfse  repl13.lzfse  repl14.lzfse  repl15.lzfse  repl16.lzfse  repl32.lzfse  repl64.lzfse  reps04.lzfse  reps05.lzfse  reps06.lzfse  reps07.lzfse  reps08.lzfse  reps09.lzfse  reps10.lzfse  reps11.lzfse  reps12.lzfse  reps13.lzfse  reps14.lzfse  reps15.lzfse  reps16.lzfse  reps32.lzfse  reps64.lzfse  repsin.lzfse  word04.lzfse  word05.lzfse  word06.lzfse  word07.lzfse  (+11 more)
crates/manic_lzfse/examples/: compress.rs  compress_ring.rs  decompress.rs  decompress_ring.rs
crates/manic_lzfse/scripts/: hash.sh  init_large.sh  lmdy.sh  plotty.R
crates/manic_lzfse/src/: lib.rs
crates/manic_lzfse/src/base/: magic_bytes.rs  mod.rs
crates/manic_lzfse/src/bits/: accum.rs  as_bit_src.rs  bit_dst.rs  bit_reader.rs  bit_src.rs  bit_writer.rs  byte_bits.rs  mod.rs
crates/manic_lzfse/src/decode/: constants.rs  decoder.rs  mod.rs  probe.rs  reader_core.rs  ring_decoder.rs  take.rs
crates/manic_lzfse/src/encode/: backend.rs  backend_type.rs  constants.rs  dummy.rs  encoder.rs  frontend_bytes.rs  frontend_ring.rs  history.rs  match_object.rs  match_unit.rs  mod.rs  ring_encoder.rs  writer.rs  writer_bytes.rs
crates/manic_lzfse/src/error/: mod.rs
crates/manic_lzfse/src/fse/: backend.rs  block.rs  buffer.rs  constants.rs  decoder.rs  encoder.rs  error_kind.rs  fse_core.rs  literals.rs  lmds.rs  mod.rs  object.rs  probe.rs  test.rs  test_fse.rs  weight_encoder.rs  weights.rs
crates/manic_lzfse/src/kit/: copy.rs  mod.rs  pack_bits.rs  read_ext_fully.rs  wide.rs
crates/manic_lzfse/src/lmd/: lmd_non_pack.rs  lmd_pack.rs  lmd_type.rs  mod.rs
crates/manic_lzfse/src/lz/: mod.rs  object.rs  writer.rs
crates/manic_lzfse/src/match_kit/: match_fast.rs  mod.rs  ops.rs
crates/manic_lzfse/src/ops/: allocate.rs  copy_long.rs  copy_short.rs  flush.rs  flush_limit.rs  len.rs  limit.rs  mod.rs  patch_into.rs  peek_data.rs  poke_data.rs  pos.rs  read_data.rs  short_limit.rs  skip.rs  truncate.rs  write_data.rs  write_long.rs  write_short.rs
crates/manic_lzfse/src/raw/: block.rs  mod.rs  ops.rs  tests.rs
crates/manic_lzfse/src/ring/: mod.rs  object.rs  ring_bits.rs  ring_block.rs  ring_box.rs  ring_lz_writer.rs  ring_reader.rs  ring_short_writer.rs  ring_size.rs  ring_type.rs  ring_view.rs
crates/manic_lzfse/src/test_utils/: lmds.rs  mod.rs
crates/manic_lzfse/src/types/: byte_reader.rs  idx.rs  mod.rs  short_buffer.rs  short_bytes.rs  short_len.rs  short_writer.rs  wide_bytes.rs  wide_bytes_mut.rs
crates/manic_lzfse/src/vn/: backend.rs  block.rs  constants.rs  error_kind.rs  mod.rs  object.rs  opc.rs  ops.rs  tests.rs  vn_core.rs
crates/manic_lzfse/test/: Cargo.toml  README.md
crates/manic_lzfse/test/src/: buddy.rs  data.rs  fuzz_read.rs  fuzz_write.rs  huge.rs  len.rs  lib.rs  mutate_0.rs  mutate_1.rs  mutate_2.rs  mutate_3.rs  mutate_4.rs  mutate_5.rs  mutate_6.rs  mutate_7.rs  ops.rs  patchwork_0.rs  patchwork_1.rs  pattern_1.rs  pattern_2.rs  pattern_3.rs  pattern_4.rs  pattern_5.rs  pattern_6.rs  (+3 more)
crates/manic_lzfse/test_kit/: Cargo.toml  README.md
crates/manic_proto/: Cargo.toml
crates/manic_proto/examples/: client.rs
crates/manic_proto/src/: codec.rs  error.rs  files.rs  lib.rs  transferinfo.rs
crates/manic_shoop/: Cargo.toml
crates/manic_shoop/src/: lib.rs  main.rs  progress.rs  ssh.rs
crates/manic_x25519/: Cargo.toml
crates/manic_x25519/src/: lib.rs  x25519.rs
crates/peer_discovery/: Cargo.toml
crates/peer_discovery/src/: lib.rs  listener.rs
crates/random_secret/: Cargo.toml
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs
croc_rewrite/: Cargo.toml
croc_rewrite/src/: main.rs
encrypted_bincode/: Cargo.toml
encrypted_bincode/src/: error.rs  lib.rs
manic/: Cargo.toml
manic/src/: app.rs  client.rs  main.rs
manic_proto/: Cargo.toml
manic_proto/examples/: client.rs  server.rs
manic_proto/src/: codec.rs  error.rs  files.rs  lib.rs  lists.rs
manic_rsa/: Cargo.toml
manic_rsa/src/: lib.rs
mnemonicode/: Cargo.toml
mnemonicode/src/: lib.rs
(+158 files in other folders)
