[package]
name = "manic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manic_http = { path = "./crates/manic_http", features = ["threaded", "progress"], default-features=false }
manic_proto = { path = "./crates/manic_proto" }
#structopt = {version = "*", features = ["paw"] }
#paw = "1.0.0"
#anyhow = "*"
#pretty_env_logger = "0.4.0"
#rand_chacha = "0.3.1"
#rand_core = { version = "*", features = ["getrandom"] }
#chacha20poly1305 = "*"
#tokio-serde = { version = "0.8.0", features = ["bincode"] }
#tokio = { version = "*", features = ["full"] }
#tokio-stream = { version = "0.1.8", features = ["net"] }
#tokio-util = { version = "0.7.1", features = ["full" ] }
#bincode = "1.3.3"
#hostname = "0.3.1"
#futures = "0.3.21"
#spake2 = { version = "0.3.1", features = ["std"] }
clap_complete_command = "0.5.1"
clap-verbosity-flag = "2.0.1"
wild = "2.1.0"
clap = { workspace = true }


[workspace.dependencies]
shadow-rs = "0.21.0"
clap_complete_command = "0.5.1"
clap_complete_fig = "4.2.0"
clap_complete_nushell = "0.1.10"
clap-verbosity-flag = "2.0.1"
wild = "2.1.0"
color-eyre = "0.6.2"
tracing-error = "0.2.0"


[workspace.dependencies.rand]
version = "0.8.5"

[workspace.dependencies.chacha20poly1305]
version = "0.10.1"
features = ["alloc", "std", "stream"]


[workspace.dependencies.aead]
version = "0.5.2"
features = ["alloc", "std", "getrandom", "stream"]

[workspace.dependencies.byteorder]
version = "1.4.3"

[workspace.dependencies.tracing]
version = "0.1.37"

[workspace.dependencies.clap]
version = "4.2.5"
features = ["derive", "wrap_help", "unicode", "cargo"]
#
#[dependencies.names]
#version = "0.14.0"
#default-features = false
#
#
#[dependencies.argon2]
#version = "0.5.0"

[workspace]
members = [
	"crates/*",
]

[profile.dev]
opt-level = 2

[profile.dev.package.backtrace]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
lto = true
opt-level = 2


[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "manic_dc"
path = "crates/manic_dc/src/main.rs"

[[bin]]
name = "manic_lzfoo"
path = "crates/manic_lzfoo/src/main.rs"

[[bin]]
name = "manic_shoop"
path = "crates/manic_shoop/src/main.rs"
