[package]
name = "croc_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spake2 = { version = "0.3.1", features = ["std"] }
bincode = "1.3.3"
anyhow = "1.0.55"

[dependencies.chacha20poly1305]
version = "0.9.0"

[dependencies.argon2]
version = "0.3.4"
features = ["parallel"]