[package]
name = "encrypted_bincode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serde = "0.8.0"
tokio-util = { version = "0.6.9", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde-encrypt = "0.6.0"
bincode = "*"
thiserror = "1.0.30"
bytes = "1.1.0"
rand_chacha = "0.3.1"
rand_core = { version = "*", features = ["getrandom"] }
chacha20poly1305 = "*"
tokio = { version = "*", features = ["full"] }
futures = "*"
log = "0.4.14"
nix = "*"
crc = "2.1.0"
zeroize = { version = "1.4.3", features = ["alloc"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
rsa = { version = "0.5.0", features = ["serde", "pkcs5"] }
sha2 = "0.10.1"
sha1 = "0.10.0"
rand = "0.8.4"
