[package]
name = "manic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manic_http = { path = "../manic_http", features = ["threaded", "progress"], default-features=false }
manic_proto = { path = "../manic_proto"}
structopt = {version = "*", features = ["paw"] }
paw = "1.0.0"
anyhow = "*"
pretty_env_logger = "0.4.0"
rand_chacha = "0.3.1"
rand_core = { version = "*", features = ["getrandom"] }
chacha20poly1305 = "*"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio = { version = "*", features = ["full"] }
tokio-util = "0.6.9"
bincode = "1.3.3"
hostname = "0.3.1"
futures = "0.3.21"
spake2 = { version = "0.3.1", features = ["std"] }


[dependencies.argon2]
version = "0.3.4"
features = ["parallel"]
