[package]
name = "mnemonicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
names = { git = "https://github.com/x0f5c3/names.git", branch = "main" }


[[bin]]
name = "gen_four"