[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
thiserror = "1.0.30"
chacha20poly1305 = "0.10.1"
time = { version = "0.3.9", features = ["serde-human-readable", "serde-well-known", "serde"] }
crc = "3.0.1"
zeroize = { version = "1.4.3", features = ["alloc"] }
tokio-serde = "0.8.0"
tokio-util = { version = "0.7.1", features = ["codec", "net", "compat", "full"] }
bytes = "1.1.0"
pin-project-lite = "0.2.9"
tokio = { version = "*", features = ["full"] }
argon2 = "0.5.0"
password-hash = { version = "0.5.0", features = ["getrandom"] }
futures = "*"
rand = "0.8.5"
rkyv = "0.7.41"
spake2 = "*"
buildstructor = "0.5.2"
tracing = "0.1.37"
rmp-serde = "1.1.1"




[dependencies.postcard]
version = "1.0.4"
features = ["alloc", "use-std"]

[dependencies.generic-array]
version = "0.14.7"
features = ["serde", "more_lengths", "zeroize"]


[dependencies.xxhash-rust]
version = "*"
features = ["xxh3"]

[dependencies.flate2]
version = "1.0.24"
