[package]
name = "dexios_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"

# AEADS
aes-gcm = "0.10.1"
chacha20poly1305 = "0.10.1"
deoxys = { version = "0.1.0" }
aead = { version = "0.5.1", features = ["stream"] }

# for wiping sensitive information from memory
zeroize = "1.5.0"

# for password hashing
argon2 = "0.5.0"
balloon-hash = "0.4.0"
blake3 = { version = "1.3.3", features = ["traits-preview"] }

# for generating random bytes
rand = "0.8.5"

indicatif = { version = "0.17.3", features = ["rayon", "improved_unicode"] }

[dependencies.rand_chacha]
version = "0.3.1"
features = ["serde1"]
