[package]
name = "manic_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.6.0", features = ["alloc"] }
argon2 = "0.5.0"
bincode = "2.0.0-rc.3"

[dependencies.serde]
version = "1.0.160"
default-features = false
features = ["derive"]


[dependencies.crypto]
version = "0.5.0"
features = ["std", "digest", "rand_core", "aead", "signature", "cipher", "password-hash", "elliptic-curve", "getrandom", "universal-hash"]


[dependencies.rand_core]
version = "0.6.4"
features = ["std", "serde1"]

[dependencies.spake2]
version = "0.3.1"
features = ["std"]

[dependencies.aes-gcm-siv]
version = "0.11.1"
features = ["stream"]

[dependencies.aes-gcm]
version = "0.10.1"
features = ["std", "stream"]

[dependencies.opaque-ke]
version = "3.0.0-pre.2"
features = ["argon2", "curve25519", "std"]

[dependencies.password-hash]
version = "0.5.0"
features = ["getrandom", "std"]