[package]
name = "manic_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.6.0", features = ["alloc"] }
argon2 = "0.5.0"
sha2 = "0.10.6"
rpassword = "7.2.0"
signature = ">=2.0, <2.1"
hashbrown = "0.13.2"
hex-literal = "0.4.1"
tokio-serde = "0.8.0"
tokio-util = { version = "0.7.1", features = ["codec", "net", "compat", "full"] }
bytes = "1.1.0"
pin-project-lite = "0.2.9"
pin-project = "1.0.12"
time = { version = "0.3.9", features = ["serde-human-readable", "serde-well-known", "serde"] }
crc = "3.0.1"
futures = "0.3.28"
buildstructor = "0.5.2"
rmp-serde = "1.1.1"
aead = "0.5.2"
tracing = "0.1.37"


[dependencies.deoxys]
version = "0.1.0"
features = ["std", "stream"]

[dependencies.tokio]
version = "1.28.0"
features = ["full"]

[dependencies.rkyv]
features = ["archive_le", "indexmap", "rend", "tinyvec", "uuid", "tinyvec_alloc", "uuid_std"]
version = "0.7.41"


[dependencies.serde_bytes]
version = "0.11.9"
features = ["alloc"]


[dependencies.flate2]
version = "1.0.25"

[dependencies.bincode]
version = "2.0.0-rc.3"
git = "https://github.com/x0f5c3/bincode"
branch = "trunk"
features = ["generic-array", "std"]

[dependencies.crypto-common]
version = "0.2.0-pre"
features = ["std", "getrandom"]

[dependencies.serde]
version = "1.0.160"
default-features = false
features = ["derive"]


[dependencies.generic-array]
version = "0.14.7"
features = ["more_lengths", "serde", "zeroize"]


[dependencies.ed25519-dalek]
version = "2.0.0-rc.2"
features = ["batch", "pem", "serde", "digest", "merlin", "asm", "pkcs8", "zeroize"]

[dependencies.rand_core]
version = "0.6.4"
features = ["std", "serde1", "getrandom"]

[dependencies.spake2]
version = "0.3.1"
features = ["std"]

[dependencies.aes-gcm-siv]
version = "0.11.1"
features = ["stream"]

[dependencies.aes-gcm]
version = "0.10.1"
features = ["std", "stream"]

#[dependencies.opaque-ke]
#version = "3.0.0-pre.2"
#features = ["argon2", "curve25519", "std"]

[dependencies.password-hash]
version = "0.5.0"
features = ["getrandom", "std"]