[package]
name = "manic_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"


[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.time]
version = "0.3.9"
features = ["serde-well-known", "serde-human-readable", "quickcheck", "formatting", "local-offset"]


[target.'cfg(linux)'.dependencies]
nix = "0.24.1"


[target.'cfg(windows)'.dependencies.windows]
version = "0.37.0"
features = ["Foundation", "Storage", "Storage_FileProperties"]
