[package]
name = "manic_shoop"
version = "0.1.1"
authors = ["Jake McGinty <me@jake.su>"]
description = "Shoop is a high-speed encrypted file transfer tool reminiscent of scp. It uses SSH to bootstrap authentication and encryption, then uses UDT (a reliable protocol from the 2000s) instead of TCP (a reliable protocol from the 1970s)."
keywords = ["scp", "transfer", "encrypted", "secure", "file"]
build = "build.rs"
homepage = "https://github.com/mcginty/shoop"
repository = "https://github.com/mcginty/shoop"
readme = "README.md"
license = "MIT"

include = [
  "**/*.rs",
  "Cargo.toml",
]

[features]
nightly = []

[lib]
name = "manic_shoop"
path = "src/lib.rs"

[[bin]]
name = "manic_shoop"
path = "src/main.rs"

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
log = "0.4"
structopt = "0.3.26"
unix-daemonize = "0.1"
byteorder = "1.3"
hex = "0.4.3"
lazy_static = "1.3"
ring = "0.16.20"
chrono = "0.4"
udt = "0.2"
colored = "2.0.0"
libc = "0.2"
pbr = "1.0"
aead = { workspace = true }
color-eyre = "0.6.2"


tracing = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
