[package]
name = "manic_x25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "docs/assets/rustdoc-include-katex-header.html",
    "--cfg", "docsrs",
]

[dependencies]
zeroize = { version = "1", features = ["derive", "std"] }

[dependencies.bincode]
version = "2.0.0-rc.3"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.curve25519-dalek]
version = "4.0.0-rc.1"
features = ["rand_core", "digest", "serde"]

[dependencies.rand_core]
version = "0.6"
default-features = false

[dev-dependencies]
bincode = "2.0.0-rc.3"
criterion = "0.4.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[[bench]]
name = "x25519"
harness = false
