[package]
name = "random_secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.x25519-dalek]
version = "2.0.0-rc.2"
features = ["serde", "getrandom", "reusable_secrets", "static_secrets"]