[package]
name = "relay"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrecy = "0.8.0"
educe = "0.4.19"
time = "0.3.9"
os_pipe = "1.0.1"


[dependencies.tracing]
version = "0.1.35"
features = ["log"]

[dependencies.zeroize]
version = "1.5.5"
features = ["derive"]

[dependencies.tokio]
version = "1.19.0"
features = ["full"]