[package]
publish = false
name = "test"
version = "0.1.0"
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Tests for manic_lzfse crate.
"""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/shampoofactory/manic_lzfse"
repository = "https://github.com/shampoofactory/manic_lzfse"
readme = "README.md"
edition = "2018"

[features]
lzfse_ref = ["lzfse_sys"]
large_data = []
huge_data = []

[dependencies]
lzfse_sys = { path = "../lzfse_sys", optional = true }

[dev-dependencies]
sha2 = "0.9.3"
manic_lzfse = { path = ".." }
test_kit = { path = "../test_kit" }
